appId: "com.recipedia"
---
- runFlow:
    file: "../../../flows/recipe/adding/createBaseRecipeForDuplicateTests.yaml"
    label: "Create base recipe"

- runFlow:
    file: "../../../asserts/alerts/en/recipeAddedToDatabase.yaml"
    env:
      RECIPE_NAME: ".*"
    label: "Assert that the alert is well the adding one (ignore recipe name)"

- tapOn:
    id: "ReduceButton::RoundButton"
    label: "Close the FAB buttons"


- runFlow:
    file: "../../../flows/recipe/adding/createBaseRecipeForDuplicateTests.yaml"
    label: "Create duplicate recipe"

- runFlow:
    file: "../../../asserts/alerts/en/recipeSimilarFound.yaml"
    label: "Assert duplicate alert appears"

- tapOn:
    id: "Recipe::Dialog::Confirm"
    label: "Confirm adding recipe despite duplicate"

- tapOn:
    id: "Recipe::Dialog::Confirm"
    label: "Confirm success message"

- tapOn:
    id: "ReduceButton::RoundButton"
    label: "Close the FAB buttons"

- runFlow:
    file: "../../../flows/recipe/deleteRecipeBySearch.yaml"
    env:
      SEARCH_TEXT: "Test Recipe"
    label: "Delete first Test Recipe"

- runFlow:
    file: "../../../flows/recipe/deleteRecipeBySearch.yaml"
    env:
      SEARCH_TEXT: "Test Recipe"
    label: "Delete first Test Recipe"

- tapOn:
    id: "BottomTabs::Home"
    label: "Return to Home screen"
