appId: "com.recipedia"
---
- runFlow:
    file: "../../../flows/recipe/adding/createBaseRecipeForDuplicateTests.yaml"
    label: "Create base recipe"

- runFlow:
    file: "../../../asserts/alerts/en/recipeAddedToDatabase.yaml"
    env:
      RECIPE_NAME: ".*"
    label: "Assert that the alert is well the adding one (ignore recipe name)"

- tapOn:
    id: "ReduceButton::RoundButton"
    label: "Close the FAB buttons"

- runFlow:
    file: "../../../flows/recipe/adding/createBaseRecipeForDuplicateTests.yaml"
    label: "Create base recipe"

- runFlow:
    file: "../../../asserts/alerts/en/recipeSimilarFound.yaml"
    label: "Assert duplicate alert appears"

- tapOn:
    id: "Recipe::Dialog::Cancel"
    label: "Cancel adding duplicate recipe"

- scrollUntilVisible:
    element:
      id: "RecipeImage::Image"
    direction: UP
    speed: 99

- runFlow:
    file: "../../../flows/recipe/adding/setRecipeTitle.yaml"
    env:
      TITLE: "Test Recip"
    label: "Change title to fuzzy match"

- tapOn:
    id: "RecipeValidate"
    label: "Validate the recipe"

- runFlow:
    file: "../../../asserts/alerts/en/recipeSimilarFound.yaml"
    label: "Assert duplicate alert appears"

- tapOn:
    id: "Recipe::Dialog::Cancel"
    label: "Cancel adding duplicate recipe"


- tapOn:
    id: "BackButton::RoundButton"
    label: "Close recipe screen because Maestro wll not achieve to erase the text"

- runFlow:
    file: "../../../flows/recipe/adding/createRecipeWithScaledQuantities.yaml"
    label: "Create recipe with scaled quantities"

- runFlow:
    file: "../../../asserts/alerts/en/recipeSimilarFound.yaml"
    label: "Assert duplicate alert appears"

- tapOn:
    id: "Recipe::Dialog::Cancel"
    label: "Cancel adding duplicate recipe"

- tapOn:
    id: "BackButton::RoundButton"
    label: "Close recipe screen because Maestro wll not achieve to erase the text"

- runFlow:
    file: "../../../flows/recipe/adding/createRecipeWithCloseQuantities.yaml"
    label: "Create recipe with very close but not equals ingredients quantities"

- runFlow:
    file: "../../../asserts/alerts/en/recipeSimilarFound.yaml"
    label: "Assert duplicate alert appears"

- tapOn:
    id: "Recipe::Dialog::Cancel"
    label: "Cancel adding duplicate recipe"

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::PrefixText"
    direction: UP
    speed: 60
    label: "Scroll up for adding a new ingredient"

- tapOn:
    id: RecipeIngredients::TextRender::1::Dropdown::CustomTextInput
    label: "Focus on ingredient text input so that scrolling won't go down to preparation"

- hideKeyboard:
    label: "Hide the keyboard"

- runFlow:
    file: "../../../flows/recipe/adding/addIngredientToRecipe.yaml"
    env:
      INDEX: "2"
      NAME: "Olive Oil"
      QUANTITY: "5"
    label: "Add Salt condiment"

- tapOn:
    id: "RecipeValidate"
    label: "Validate the recipe"

- runFlow:
    file: "../../../asserts/alerts/en/recipeSimilarFound.yaml"
    label: "Assert duplicate alert appears"

- tapOn:
    id: "Recipe::Dialog::Cancel"
    label: "Cancel adding duplicate recipe"

- tapOn:
    id: "BackButton::RoundButton"
    label: "Return to home screen"

- tapOn:
    id: "ReduceButton::RoundButton"
    label: "Close the FAB buttons as we no more need them"

- runFlow:
    file: "../../../flows/recipe/deleteRecipeBySearch.yaml"
    env:
      SEARCH_TEXT: "Test Recipe"
    label: "Delete Test Recipe via search"

- tapOn:
    id: "BottomTabs::Home"
    label: "Return to Home screen"
